# 6502Emulator

./: .gitignore  CMakeLists.txt  Makefile  cpu.cpp  cpu.hpp  genrom.c  main.cpp  opcodes.hpp  rom.asm  test.asm  tests.cpp
assembler/: assembler.c  assembler.h
include/: cpu.hpp  help.h  opcodes.hpp
src/: CMakeLists.txt  cpu.cpp  genrom.c  main.cpp
src/assembler/: assembler.c
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  tests
